Fri May 12 16:33:44 1995  Gray Watson  (gray@burger.letters.com)

	* Released version 3.0.6-beta.

	* Fixed up logging of time.  Lots of ifdefs.

	* Added a pointer overhead structure.

Fri May  5 11:39:39 1995  Gray Watson  (gray@burger.letters.com)

	* Renamed a number of chunk fields to remove the use of count.

	* Logged starting/ending time in logfile.

	* Added thread-id tracking with conf.h option.

	* Added pointer-count tracking with conf.h option.

	* Added interation-count tracking with conf.h option.

	* Added global/relative time tracking with conf.h option.

Fri Mar 31 16:51:52 1995  Gray Watson  (gray@burger.letters.com)

	* Better tag output from dmalloc -t.

	* New version of argv files.

	* Fixed problem with dmalloc -c and start-count.

	* Added some messages about upcoming errors in dmalloc_t.

Thu Mar 23 10:34:33 1995  Gray Watson  (gray@burger.letters.com)

	* Improved the manual a bit.  Phased in some alpha changes.

	* Added some Next notes to the contrib directory.  Need more.

Fri Mar 10 13:29:49 1995  Gray Watson  (gray@burger.letters.com)

	* Added allow-zero token for not minding malloc(0) and free(0L).

	* Made all chunk.c global counters longs.

Fri Mar  3 12:37:17 1995  Gray Watson  (gray@burger.letters.com)

	* Integrated into new CVS hierarchy.  New copyrights.

Mon Jan  2 18:51:19 1995  Gray Watson  (gray@fridge.antaire.com)

        * Released version 3.0.5.

        * Changed my mail address and ftp location.

Fri Dec 16 15:07:29 1994  Gray Watson  (gray@blender.antaire.com)

	* Fixed some old references to malloc in docs.  Thanks Dave.

Thu Dec 15 10:25:59 1994  Gray Watson  (gray@blender.antaire.com)

	* Released version 3.0.4.

Sat Nov 12 18:05:34 1994  Gray Watson  (gray@blender.antaire.com)

	* Removed message arg to env-get routine due to various probs.

	* New STDC definitions of DMALLOC_PNT and DMALLOC_FREE_RET.

	* Removed all STRDUP and BDUP macros.  Was anyone using them?
