@@ -1,9 +1,10 @@
 -------------------------------------------------------------------------------
-$Id: NEWS,v 1.55 1995/05/12 20:49:35 gray Exp $
+$Id: NEWS,v 1.56 1995/05/13 00:34:54 gray Exp $
 -------------------------------------------------------------------------------
 
 Version 3.0.6:
 
+	* Fixed problem with NEVER_REUSER and realloc same block-size.
 	* Logged starting/ending time in logfile.
 	* Added thread-id tracking with conf.h option.
 	* Added pointer-count tracking with conf.h option.
