@@ -2,6 +2,8 @@ Fri May 12 16:33:44 1995  Gray Watson  (gray@burger.letters.com)
 
 	* Released version 3.0.6-beta.
 
+	* Fixed problem with NEVER_REUSER and realloc same block-size.
+
 	* Fixed up logging of time.  Lots of ifdefs.
 
 	* Added a pointer overhead structure.
@@ -964,5 +966,5 @@ Thu Mar 12 19:28:34 1992  Gray Watson  (gray@toaster.antaire.com)
 	* Started ChangeLog.
 
 -------------------------------------------------------------------------------
-$Id: ChangeLog,v 1.144 1995/05/13 00:01:37 gray Exp $
+$Id: ChangeLog,v 1.145 1995/05/13 00:34:52 gray Exp $
 -------------------------------------------------------------------------------
